--- a/src/main/webapp/css/DetailProductPage.css
+++ b/src/main/webapp/css/DetailProductPage.css
@@ -35,7 +35,6 @@ h2 {
     margin-top: 20px;
 }
 
-
 /* Stile per l'immagine del prodotto */
 .product-image img {
     max-width: 350px; /* Aumenta la larghezza massima dell'immagine */
@@ -80,18 +79,23 @@ h2 {
     color: #000000; /* Colore per il prezzo originale, se desideri differenziarlo */
     text-decoration: line-through; /* Aggiunge l'effetto barrato */
 }
+/* Riduci la dimensione del testo per i messaggi specifici */
+.unavailable-product {
+    font-size: 0.6em; /* Riduci la dimensione del testo */
+    color: red; /* Mantieni il colore rosso per il testo */
+}
+
+/* Riduci la dimensione del testo per i messaggi specifici per gli amministratori */
+.admin-message {
+    font-size: 0.6em; /* Riduci la dimensione del testo */
+    color: #ff0000; /* Mantieni il colore rosso per il testo */
+}
 
 .discounted-price {
     font-size: 25px;
     color: #00a800; /* Colore verde per il prezzo scontato */
 }
 
-
-/* Stile per i paragrafi delle informazioni del prodotto */
-.product-info p {
-    margin: 10px 0;
-    color: #000000;
-}
 
 /* Stile per i campi input nelle informazioni del prodotto */
 .product-info p input, .product-info p select {
@@ -129,6 +133,50 @@ h2 {
     margin-bottom: 8px; /* Spazio tra le opzioni */
 }
 
+/* Stile per i pulsanti */
+.delete-button {
+    background-color: #dc3545; /* Rosso per eliminare */
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-right: 10px; /* Spazio a destra */
+    margin-bottom: 10px; /* Spazio in basso */
+}
+
+.modify-button {
+    background-color: #007bff; /* Blu per modificare */
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-right: 10px; /* Spazio a destra */
+    margin-bottom: 10px; /* Spazio in basso */
+}
+
+.add-to-cart-button {
+    background-color: #28a745; /* Verde per aggiungere al carrello */
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-right: 10px; /* Spazio a destra */
+    margin-bottom: 10px; /* Spazio in basso */
+}
 
 /* Stile per i link al passaggio del mouse */
 .centered-links a:hover {
@@ -140,18 +188,6 @@ h2 {
     color: red !important;
     font-size: 20px;
     text-align: left;
-}
-
-/* Stile per il pulsante di invio */
-input[type="submit"] {
-    background-color: #28a745;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s; /* Transizione */
 }
 
 #product-image {
@@ -193,7 +229,6 @@ input[type="submit"] {
     cursor: zoom-in; /* Cambia il cursore al passaggio del mouse per indicare che l'immagine è cliccabile */
 }
 
-
 .close {
     position: absolute;
     top: 15px;
@@ -204,7 +239,6 @@ input[type="submit"] {
     transition: 0.3s;
 }
 
-
 .close:hover,
 .close:focus {
     color: #bbb;
@@ -212,73 +246,64 @@ input[type="submit"] {
     cursor: pointer;
 }
 
-/* Stile per il pulsante di invio al passaggio del mouse */
-input[type="submit"]:hover {
-    background-color: #218838;
-}
-
-/* Media query per tablet */
-@media (min-width: 768px) {
+/* Media queries per rendere la pagina responsive */
+@media (max-width: 768px) {
     .product-content {
-        flex-direction: row; /* Ritorna al layout orizzontale */
-        justify-content: space-around; /* Distribuisce lo spazio intorno agli elementi */
+        flex-direction: column; /* Disporre gli elementi in colonna */
+        align-items: center; /* Centrare gli elementi */
     }
 
-    .product-image img {
-        margin-left: 0; /* Assicura che l'immagine sia centrata */
-    }
-
-    .product-info, .product-details {
-        text-align: left; /* Allinea il testo a sinistra */
-        margin-right: 20px; /* Aggiunge un margine destro */
-    }
-}
-
-/* Media query per desktop */
-@media (min-width: 1024px) {
-    .product-content {
-        justify-content: center; /* Centra gli elementi nel contenitore */
-    }
-
-    .product-image img {
-        margin-left: 150px; /* Ripristina il margine sinistro per l'immagine */
+    .product-image {
+        margin-left: 0; /* Rimuovere il margine sinistro */
+        margin-right: 0; /* Rimuovere il margine destro */
+        text-align: center; /* Centrare l'immagine */
     }
 
     .product-info {
-        max-width: 500px; /* Limita la larghezza delle informazioni del prodotto */
-        margin-right: 150px; /* Aumenta il margine destro */
+        max-width: 100%;
+        margin-right: 0; /* Rimuovere il margine destro */
+        margin-top: 20px; /* Aggiungere margine superiore */
     }
 
     .product-details {
-        margin-left: -50px; /* Ajusta il margine sinistro per i dettagli del prodotto */
-    }
-}
-@media (max-width: 616px) {
-    body {
-        font-size: 14px; /* Riduce la dimensione del font */
-    }
-
-    h2 {
-        font-size: 18px; /* Riduce la dimensione del font del titolo */
+        margin-left: 0; /* Rimuovere il margine sinistro */
+        font-size: 20px; /* Ridurre la dimensione del font */
+        width: 100%; /* Impostare la larghezza al 100% */
+        text-align: center; /* Centrare il testo */
     }
 
     .product-image img {
-        max-width: 100%; /* Permette all'immagine di espandersi fino al 100% della larghezza del contenitore */
-        margin: 0 auto; /* Centra l'immagine */
+        max-width: 100%; /* Impostare la larghezza massima al 100% */
+        margin-left: 0; /* Rimuovere il margine sinistro */
+    }
+}
+
+@media (max-width: 480px) {
+    .product-info {
+        padding: 10px; /* Ridurre il padding */
+        font-size: 20px; /* Ridurre la dimensione del font */
     }
 
-    .product-info, .product-details {
-        font-size: 16px; /* Ajusta la dimensione del font per le informazioni e i dettagli del prodotto */
-        padding: 10px; /* Aggiunge un padding per evitare che il testo tocchi i bordi dello schermo */
-        margin-right: 0; /* Rimuove il margine destro */
+    .product-details {
+        font-size: 16px; /* Ridurre ulteriormente la dimensione del font */
     }
 
-    .product-info p input, .product-info p select {
-        width: 100%; /* Espande i campi di input e select per occupare tutta la larghezza disponibile */
-        margin: 10px 0; /* Aggiunge un margine superiore e inferiore per separare meglio gli elementi */
+    .product-image img {
+        max-width: 100%; /* Assicurarsi che l'immagine non superi la larghezza dello schermo */
     }
 
-    input[type="submit"] {
-        width: 100%; /* Espande il pulsante di invio per occupare tutta la larghezza disponibile */
+    .modal-content {
+        max-width: 90%; /* Consentire al modale di occupare più spazio sullo schermo */
+    }
+
+    .modal-content img {
+        max-width: 100%; /* Consentire all'immagine di scalare all'interno del modale */
+        max-height: auto;
+    }
+
+    .close {
+        top: 10px;
+        right: 10px;
+        font-size: 30px; /* Regolare per schermi più piccoli */
     }
 }
